[package]
name = "rust-learning"
version = "0.1.0"
edition = "2018"
authors = ["RookieOHY<204130199@qq.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ch01_game_demo"
, "ch02_os", "ch03_bi_bao", "ch04_iter"]
[dependencies]
